--- a/index.html
+++ b/index.html
@@ -1,157 +1,14 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>MyProtofolio</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
-    <link rel="stylesheet" href="assets/css/progress-bars.css">
-    <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MANOJ KUMAR S</title>
 </head>
 
-<body style="background: #95a1aa;">
-    <nav class="navbar navbar-light navbar-expand-md fixed-top navigation-clean" style="background: rgba(0,0,0,0.6);">
-        <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html" style="color: rgb(255,255,255);font-size: 18px;">HOME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skill-sec" style="color: rgb(255,255,255);font-size: 18px;">SKILLS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="project.html" style="color: rgb(255,255,255);font-size: 18px;">PROJECTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about-sec" style="color: rgb(255,255,255);font-size: 18px;">ABOUT</a></li>
-                    <li class="nav-item"></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <section style="width: 100%;">
-        <div class="container image-con" style="margin-top: 75px;"><img class="rounded img-fluid" src="assets/img/smk_landscape.jpeg"></div>
-        <div class="container text-center" style="background: rgba(0,0,0,0.3);padding-top: 25px;border-top-left-radius: 20px;border-top-right-radius: 20px;border-bottom-right-radius: 20px;border-bottom-left-radius: 20px;margin-top: 10px;">
-            <h1 class="main-name"><span style="color: rgb(255,255,255);">I'm</span>&nbsp;MANOJ KUMAR S</h1>
-            <h2 class="main-details">STUDENT | MACHINE LEARNING ENTHUSIAST | DEVELOPER</h2>
-            <div class="text-center d-flex justify-content-around align-items-center" style="margin-top: 75px;font-size: 36px;padding-bottom: 25px;"><a class="resume-download" href="https://drive.google.com/file/d/12ei2qts9BDXUfsg8HraVKACdxsFBEILm/view?usp=sharing" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M3 17C3 16.4477 3.44772 16 4 16H16C16.5523 16 17 16.4477 17 17C17 17.5523 16.5523 18 16 18H4C3.44772 18 3 17.5523 3 17ZM6.29289 9.29289C6.68342 8.90237 7.31658 8.90237 7.70711 9.29289L9 10.5858L9 3C9 2.44772 9.44771 2 10 2C10.5523 2 11 2.44771 11 3L11 10.5858L12.2929 9.29289C12.6834 8.90237 13.3166 8.90237 13.7071 9.29289C14.0976 9.68342 14.0976 10.3166 13.7071 10.7071L10.7071 13.7071C10.5196 13.8946 10.2652 14 10 14C9.73478 14 9.48043 13.8946 9.29289 13.7071L6.29289 10.7071C5.90237 10.3166 5.90237 9.68342 6.29289 9.29289Z" fill="currentColor"></path>
-                    </svg>RESUME</a>
-                <div class="detail-social-link"><a href="https://github.com/MANOJ-KUMAR-2000" target="_blank" style="margin-right: 10px;margin-left: 10px;"><i class="fa fa-github-square" data-bss-hover-animate="jello" style="color: var(--bs-dark);margin-right: 5px;margin-left: 5px;"></i></a><a href="https://www.kaggle.com/manojkumars00" target="_blank" style="margin-right: 10px;margin-left: 10px;"><i class="fab fa-kaggle" data-bss-hover-animate="jello" style="color: var(--bs-dark);margin-right: 5px;margin-left: 5px;"></i></a><a href="https://www.hackerrank.com/MANOJ_00" target="_blank" style="margin-right: 10px;margin-left: 10px;"><i class="fab fa-hackerrank" data-bss-hover-animate="jello" style="color: var(--bs-dark);margin-right: 5px;margin-left: 5px;"></i></a><a style="margin-right: 10px;margin-left: 10px;" href="https://www.linkedin.com/in/smk2000/" target="_blank"><i class="fa fa-linkedin-square" data-bss-hover-animate="jello" style="color: var(--bs-dark);margin-right: 5px;margin-left: 5px;"></i></a></div>
-            </div>
-        </div>
-    </section>
-    <section id="skill-sec">
-        <div class="container" style="margin-top: 25px;background: rgba(0,0,0,0.3);">
-            <h1 style="text-align: center;margin-top: 60px;border-bottom: 2.5px solid rgb(33, 37, 41);font-size: 42px;padding-top: 20px;"><i class="fas fa-code"></i>SKILLS</h1>
-            <h4 style="margin-top: 25px;color: rgb(255,255,255);"><strong><span style="text-decoration: underline;">Languages</span></strong></h4>
-            <div class="row" style="margin-top: 5pxpx;margin-bottom: 10px;text-align: center;">
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>PYTHON&nbsp;<i class="fab fa-python"></i></h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"><span class="visually-hidden">85%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>JAVASCRIPT&nbsp;<i class="fab fa-js-square"></i></h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"><span class="visually-hidden">50%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>HTML&nbsp;<i class="fab fa-html5"></i></h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="visually-hidden">60%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>CSS&nbsp;<i class="fa fa-css3"></i></h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"><span class="visually-hidden">55%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>C&nbsp;<i class="fa fa-star"></i></h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"><span class="visually-hidden">40%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>JAVA&nbsp;<i class="fab fa-java"></i></h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"><span class="visually-hidden">50%</span></div>
-                    </div>
-                </div>
-            </div>
-            <h4 style="color: rgb(255,255,255);"><strong><span style="text-decoration: underline;">Technology</span></strong></h4>
-            <div class="row" style="margin-top: 5px;margin-bottom: 10px;text-align: center;">
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>MACHINE LEARNING</h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"><span class="visually-hidden">65%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>DEEP LEARNING</h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"><span class="visually-hidden">70%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>TENSORFLOW&nbsp;<i class="fa fa-star"></i></h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"><span class="visually-hidden">75%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>NEURAL NETWORKS</h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="visually-hidden">80%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>COMPUTER VISION&nbsp;<i class="fa fa-star"></i></h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="visually-hidden">60%</span></div>
-                    </div>
-                </div>
-                <div class="col-md-4" style="padding-bottom: 20px;">
-                    <h5>NLP&nbsp;<i class="fa fa-star"></i></h5>
-                    <div class="progress">
-                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%;"><span class="visually-hidden">45%</span></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="text-center" id="about-sec" style="margin-top: 30px;padding-bottom: 25px;">
-        <div class="container" style="background: rgba(0,0,0,0.3);">
-            <h1 style="border-bottom-style: solid;margin-top: 80px;padding-top: 20px;">ABOUT</h1>
-            <p style="padding-right: 5px;padding-left: 5px;font-size: 20px;">I am a developer and student pursuing computer science and engineering bachelor's degree and always excited about Artificial Intelligence and Deep Learning and love to learn new experience.</p>
-            <div class="row" style="margin-top: 25px;margin-bottom: 10px;text-align: center;padding-top: 2px;">
-                <div class="col-md-4">
-                    <h5 style="font-size: 16px;"><i class="fas fa-envelope"></i>&nbsp;E-MAIL</h5>
-                    <h6 style="color: rgb(255,255,255);">smk11500@gmail.com</h6>
-                </div>
-                <div class="col-md-4">
-                    <h5 style="font-size: 16px;"><i class="fas fa-mobile-alt"></i>&nbsp;CONTACT<br></h5>
-                    <h6 style="color: rgb(255,255,255);">+91 8056556305</h6>
-                </div>
-                <div class="col-md-4">
-                    <h6 style="font-size: 16px;"><i class="fas fa-home"></i>&nbsp;HOME</h6>
-                    <h6 style="color: rgb(255,255,255);">Theni, Tamilnadu, India.</h6>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer class="footer-basic" style="padding-top: 40px;padding-bottom: 10px;">
-        <div class="social" style="padding-bottom: 10px;"><a href="https://www.instagram.com/__c_o_d_e_r_/" target="_blank"><i class="fab fa-instagram"></i></a><a href="https://www.youtube.com/channel/UCt_QLSYgbQI4azL7n5n07dg" target="_blank"><i class="fab fa-youtube"></i></a><a href="https://twitter.com/MANOJ_S_EEKER" target="_blank"><i class="fab fa-twitter"></i></a><a href="https://www.facebook.com/profile.php?id=100007228906719" target="_blank"><i class="fab fa-facebook-square"></i></a></div>
-        <p class="copyright">Copyright © 2021</p>
-    </footer>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
+<body>
+
 </body>
 
 </html>
